--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -965,6 +960,9 @@ sup{
 }
 
 
+/*------------- media responsive start-------------*/
+
+
 @media screen and (max-width:1200px){
 
     /* common styles */
@@ -1144,8 +1142,9 @@ sup{
     html{
         font-size:12px;
     }
+
     /* about section styles */
-   /* client section styles */
+
    .small-hide{
        display: none;
    }
@@ -1159,8 +1158,7 @@ sup{
     .flex-30{
         flex:0 1 100%;
     }
-    /* testimonal section styles */
-
+    
     /* portfoio section styles */
     .flex-32{
         flex:0 1 100%;
@@ -1273,7 +1271,7 @@ sup{
     }
 
 
-/* blog page styles */
+/* blog page*/
 .blog-content-section{
     color: #473D3A;
 }
@@ -1298,13 +1296,16 @@ sup{
 }
 .blog-article-col-1{
     margin-bottom:3rem;
+    margin: 1rem;
 }
 .article-image-box{
     width:100%;
     font-size:0;
+    max-height: 440px;
 }
 .article-image-box img{
     width:100%;
+    margin-top: 2rem;
     max-height:440px;
     object-fit: cover;
 }
@@ -1320,7 +1321,7 @@ sup{
 }
 .article-text{
     box-shadow:2px 2px 5px 1px rgb(199, 199, 199);
-    padding:1rem;
+    padding: 0.80rem;
 }
 .date ,.comments{
     margin-right:0.5rem;
@@ -1340,7 +1341,9 @@ sup{
     padding-top:1rem;
 }
 .page-number{
-    margin-left:30%;
+    margin-left:45%;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 .page-number div{
     padding:0.8rem;
@@ -1354,70 +1357,7 @@ sup{
     background-color: var(--banner-button);
     color:var(--primary);
 }
-/* aside-bar section styles */
-.aside-section{
-    color:#4B413E;
-}
-.recentpost-date{
-    font-size: 0.9rem;
-    font-style:italic;
-    color:rgb(189, 189, 189);
-}
-.aside-wrapper{
-    padding:2rem;
-    box-shadow:2px 2px 5px 1px rgb(199, 199, 199);
-    align-self:stretch;
-}
-.search-button{
-    padding:0.5rem;
-    background-color:var(--banner-button);
-    color:white;
-}
-.search-box input{
-    border:0;
-    border:1px solid rgb(214, 214, 214);
-    outline:none;
-}
-.recent-post-image{
-    width:100%;
-}
-.recent-post-image img{
-    width:100%;
-}
-.aside-heading{
-    font-weight:700;
-    font-size: 1.2rem;
-}
-.tags span{
-    padding:0.5rem;
-    border:0.5px solid rgb(226, 226, 226);
-    display:inline-block;
-    font-size:0.9rem;
-    margin-top:0.5rem;
-    border-radius: 5px;
-}
-.tags span:hover{
-    background-color: var(--banner-button);
-}
-.special-heading{
-    font-weight:700;
-    font-size:0.8rem;
-    line-height: 1.4;
-}
-.special-heading:hover{
-    color:var(--banner-button);
-}
-.aside-nav li{
-    font-size:0.9rem;
-    font-weight:500;
-}
-.aside-nav li:hover{
-    color:var(--banner-button);
-}
-.aside-nav span{
-    font-weight: 500;
-    color: rgb(170, 170, 170);
-}
+
 @media only screen and (max-width:1024px){
     .container{
         max-width:960px;
